--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,9 @@
+.Titulos {
+  font-size: 30px;
+  color: rgb(250, 251, 252);
+  background-color: rgb(37, 70, 70);
+}
+
 .box {
   width: 150px;
   height: 100px;
@@ -6,4 +12,33 @@
   border: 5px solid black;
   background-color: rgb(66, 112, 97);
   overflow: auto;
+}
+
+div.selectores {
+  height: auto;
+  width: auto;
+  background-color: cadetblue;
+  border: black 1px solid;
+  font-size: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+#caja1 {
+  width: 50%;
+}
+
+#caja2 {
+  width: 100vw;
+}
+
+#cajacontenedora,
+#caja3 {
+  width: 100px;
+  margin: 0px;
+}
+
+#caja3 {
+  width: 80vw;
+  background: cyan;
 }
