--- a/CSS/style.css
+++ b/CSS/style.css
@@ -184,3 +184,31 @@ h3 {
   display: flex;
   flex-wrap: wrap;
 }
+/*GRID*/
+
+.Grid.hijos {
+  height: 100px;
+  width: auto;
+  border: black 1px solid;
+}
+
+.Grid.Padre {
+  background-color: rgb(184, 181, 181);
+  display: grid;
+}
+
+.Grid.hijos.c1 {
+  background-color: rgb(240, 72, 72);
+}
+.Grid.hijos.c2 {
+  background-color: rgb(224, 224, 93);
+}
+.Grid.hijos.c3 {
+  background-color: rgb(127, 224, 127);
+}
+.Grid.hijos.c4 {
+  background-color: rgb(82, 149, 204);
+}
+.Grid.hijos.c5 {
+  background-color: rgb(216, 138, 223);
+}
