--- a/CSS/style.css
+++ b/CSS/style.css
@@ -59,6 +59,10 @@
   z-index: 1;
 }
 
+.Titulos.Transiciones {
+  top: 0px;
+}
+
 .box {
   width: 150px;
   height: 100px;
@@ -610,4 +614,18 @@ h3.subtitulos {
     width: 430px;
     background-color: rgb(178, 93, 218);
   }
+}
+
+/*TRansiciones*/
+
+.Transiciones.ejemplo {
+  background-color: rgb(247, 92, 92);
+  width: 100px;
+  height: 100px;
+}
+
+.Transiciones.ejemplo:hover {
+  background-color: rgb(236, 236, 117);
+  width: 500px;
+  transition: background 2s, width 1s;
 }
